<resources>
    <string name="app_name">UMF Community Marketplace</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="TheAuthor">Author: </string>
    <string name="TheBook">Book: </string>
    <string name="ClassUsed">Class: </string>
    <string name="Condition">Condition: </string>
    <string name="ISBNasString">ISBN: </string>
    <string name="PriceasString">Price: </string>
    <string name="check">Check Details</string>
    <string name="login_header">Please enter your UM-Flint email and password to sign in or create an account</string>
    <string name="title_activity_view_listings">ViewListings</string>
    <string name="node_elastic">elasticsearch</string>
    <string name="field_password">password</string>
    <string name="contact_email">Contact\nEmail:</string>


</resources>
