<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingTop="10dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/TheBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textColor="#FFCB05"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:fontFamily="@font/assistant_semibold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/ClassUsed"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:fontFamily="@font/assistant_semibold" />

            <TextView
                android:id="@+id/ClassUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="where"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                card_view:fontFamily="@font/assistant" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/Condition"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:fontFamily="@font/assistant_semibold" />

            <TextView
                android:id="@+id/Condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="where"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                card_view:fontFamily="@font/assistant" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/ISBNasString"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:fontFamily="@font/assistant_semibold" />

            <TextView
                android:id="@+id/ISBNasString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="where"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                card_view:fontFamily="@font/assistant" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/PriceasString"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:fontFamily="@font/assistant_semibold" />

            <TextView
                android:id="@+id/PriceasString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="where"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/TheAuthor"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:fontFamily="@font/assistant_semibold" />

            <TextView
                android:id="@+id/TheAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="where"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="5dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />


    </LinearLayout>
</android.support.v7.widget.CardView>